# python-hw

./: flake.nix  pyproject.toml
hw_1_1/: main.py
hw_1_1/artifacts/: solution.txt  test_input.txt
hw_1_3/: main.py
hw_1_3/artifacts/: solution.txt
hw_2/: main.py
hw_2/artifacts/: solution.txt  test_input2.txt
hw_3/: main.py  pyproject.toml
hw_3/artifacts/: hash.txt
hw_3/matrix_lib/: cli.py  matrix.py  mixins.py
